# data-dictionary

./: .gitignore  CNAME  EL.data.model.csv  EL.data.model.jsonld  EL.jsonld  Notes on Data Model.md  README.md  Untitled-2.ipynb  _config.yml  create_docs.py  data_manager.py  file_manager.py  get_elite_model.sh  index.html  index.md  main_workflow.py  page_manager.py  pyproject.toml  requirements.txt  template_page_template.md  term_doc_template.md  term_file_manager.py  term_page_manager.py  term_page_template.md  update_template_page.py  veoibd.data.model.csv  veoibd.data.model.jsonld
_data/: Affymetrix_U133AB.csv  Analysis.csv  Assay Metadata.csv  Assay,Metadata.csv  BaseAnnotation.csv  BiospecimenMetadataTemplate.csv  Biospecimen_human.csv  Biospecimen_nonHuman.csv  Biospecimen_non_Human.csv  Bird.csv  Boolean.csv  CaptiveCaptivityStatus.csv  ClinicalMetadataTemplate.csv  ComputationalTools.csv  DCC.csv  DataModel.csv  Drop-Seq.csv  Female.csv  GIPhenotype.csv  Genotyping_Human.csv  Hispanic_or_LatinoEthnicity.csv  HispanicorLatinoEthnicity.csv  Human_Reference_Atlas_values_(not_listed_for_purposes_of_this_RFC).csv  Illumina_h650.csv  Individual_Human.csv  Individual_nonHuman.csv  Individual_non_Human.csv  Instrument.csv  LG.csv  Label_freeLabelQuantiation.csv  ManifestColumn.csv  Measurement Unit.csv  Metabolomics.csv  Metabolomics_Human.csv  Metadata.csv  Metagenomics.csv  Microbiome.csv  Model Organism.csv  Model_Organism.csv  No.csv  (+200 more)
_includes/: EL_network_graph.html  head_custom.html
_layouts/: template_page_template.md  term_page_template.md
(+448 files in other folders)
